--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="120x120" href="https://csskiller.es/icon/apple-touch-icon-120x120.png">
   <link rel="apple-touch-icon" sizes="144x144" href="https://csskiller.es/icon/apple-touch-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="https://csskiller.es/icon/apple-touch-icon-152x152.png">
-<title>CSSKILLER</title>
+<title>Pius</title>
   <script>
     function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
