--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <script src="../../style/js/lib/respond.js"></script>
 <![endif]-->
 <link href="./CSSKILLER_files/app.css" rel="stylesheet"></head>   
-  <body class="active-page" style="height: 742px;"><p>Enter the viod</p>
+  <body class="active-page" style="height: 742px;">
     <noscript>
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TDVLZ5F" height="0" width="0" style="display:none;visibility:visible"></iframe>
     </noscript>
